applications/cluster-resources/monitoring/netpols/prometheus-allow-scraping.ftl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scraping
  namespace: ${namespace}
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "config.application.namePrefix.monitoring"
          podSelector:
            matchLabels:
              prometheus: kube-prometheus-stack-prometheus
